added files for exercise 1 and exercise 3
small correction in exercise 1 . uploaded the whole code for exercise 3

--- a/exercise1.html
+++ b/exercise1.html
@@ -63,7 +63,7 @@
       season = "Spring"
     }
     else if(month >= 5 && month <= 7){
-      season = "Fall"
+      season = "Summer"
     }
     else if(month >= 8 && month <= 10){
       season = "Fall"
